--- a/project.private.config.json
+++ b/project.private.config.json
@@ -7,6 +7,13 @@
     "miniprogram": {
       "list": [
         {
+          "name": "user",
+          "pathName": "pages/student/user/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "training",
           "pathName": "pages/student/training/index",
           "query": "",
