[mod]学员主页和教练主页绘制

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,9 +2,9 @@
   "pages": [
     "pages/loadding/index",
     "pages/student/home/index",
-    "pages/student/training/index",
     "pages/student/user/index",
-    "pages/student/list/index"
+    "pages/coach/home/index",
+    "pages/coach/user/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
