--- a/project.private.config.json
+++ b/project.private.config.json
@@ -7,23 +7,16 @@
     "miniprogram": {
       "list": [
         {
-          "name": "user",
+          "name": "coach-user",
+          "pathName": "pages/coach/user/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "student-user",
           "pathName": "pages/student/user/index",
           "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "training",
-          "pathName": "pages/student/training/index",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "list",
-          "pathName": "pages/student/list/index",
-          "query": "type=car",
           "launchMode": "default",
           "scene": null
         },
@@ -45,24 +38,6 @@
           "name": "首页-快速开始",
           "pathName": "pages/index/index",
           "query": ""
-        },
-        {
-          "name": "商品列表",
-          "pathName": "pages/goods-list/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "云开发示例",
-          "pathName": "pages/examples/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "个人中心",
-          "pathName": "pages/user-center/index",
-          "query": "",
-          "scene": null
         }
       ]
     }
