--- a/project.private.config.json
+++ b/project.private.config.json
@@ -7,6 +7,13 @@
     "miniprogram": {
       "list": [
         {
+          "name": "boss-home",
+          "pathName": "pages/boss/home/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "coach-home",
           "pathName": "pages/coach/home/index",
           "query": "",
