--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,9 +3,11 @@
     "pages/loadding/index",
     "pages/student/home/index",
     "pages/student/user/index",
+    "pages/student/coachList/index",
     "pages/coach/home/index",
     "pages/coach/user/index",
     "pages/boss/home/index",
+    "pages/gallery/index",
     "pages/boss/coachs_manage/index",
     "pages/boss/coachs_manage/edit/index",
     "pages/boss/students_manage/index",
