--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,13 +1,12 @@
 {
   "pages": [
+    "pages/home/index",
+    "pages/individualCenter/index",
     "pages/login/index",
-    "pages/student/home/index",
     "pages/student/user/index",
     "pages/student/coachList/index",
     "pages/student/orderClass/index",
-    "pages/coach/home/index",
     "pages/coach/user/index",
-    "pages/boss/home/index",
     "pages/gallery/index",
     "pages/privacy/index",
     "pages/boss/coachs_manage/index",
@@ -20,6 +19,25 @@
     "navigationBarBackgroundColor": "#1bd0ad",
     "navigationBarTitleText": "预约驾考",
     "navigationBarTextStyle": "white"
+  },
+  "tabBar": {
+    "color": "#888",
+    "selectedColor": "#1AAD19",
+    "backgroundColor": "#ffffff",
+    "list": [
+      {
+        "pagePath": "pages/home/index",
+        "text": "首页",
+        "iconPath": "icons/home.png",
+        "selectedIconPath": "icons/home_selected.png"
+      },
+      {
+        "pagePath": "pages/individualCenter/index",
+        "text": "个人中心",
+        "iconPath": "icons/userCenter.png",
+        "selectedIconPath": "icons/userCenter_selected.png"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2",
