--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -17,7 +17,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#1bd0ad",
-    "navigationBarTitleText": "预约驾考",
+    "navigationBarTitleText": "川大教培",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
