--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
     "packNpmRelationList": [],
     "minifyWXSS": true
   },
-  "appid": "wx01c436eac647c6fa",
+  "appid": "wx5af33dbcb1bde2ab",
   "projectname": "quickstart-wx-cloud",
   "libVersion": "2.20.1",
   "cloudfunctionTemplateRoot": "cloudfunctionTemplate/",
