--- a/project.private.config.json
+++ b/project.private.config.json
@@ -7,6 +7,13 @@
     "miniprogram": {
       "list": [
         {
+          "name": "editPassWord",
+          "pathName": "pages/editPassWord/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "personalInformation",
           "pathName": "pages/personalInformation/index",
           "query": "",
