--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,6 +9,7 @@
     "pages/coach/user/index",
     "pages/gallery/index",
     "pages/privacy/index",
+    "pages/registerPage/index",
     "pages/editPassWord/index",
     "pages/personalInformation/index",
     "pages/boss/coaches_manage/index",
