--- a/project.private.config.json
+++ b/project.private.config.json
@@ -7,6 +7,13 @@
     "miniprogram": {
       "list": [
         {
+          "name": "pages/orderDetail",
+          "pathName": "pages/orderList/detail/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "evaluationPage",
           "pathName": "pages/evaluationPage/index",
           "query": "",
