--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -15,6 +15,7 @@
     "pages/orderList/detail/index",
     "pages/personalInformation/index",
     "pages/evaluationPage/index",
+    "pages/boss/defaultConfig/index",
     "pages/boss/coaches_manage/index",
     "pages/boss/coaches_manage/edit/index",
     "pages/boss/students_manage/index",
